force-app/main/default/objects/Sensor__c/Sensor__c.object-meta.xml
<CustomObject>
    <label>Sensor</label>
    <nameField>
        <displayFormat>SNS-{0000}</displayFormat>
        <label>Sensors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sensors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>