force-app/main/default/objects/Sensor__c/fields/Date_time_value__c.field-meta.xml
<CustomField>
    <fullName>Date_time_value__c</fullName>
    <formula>DATETIMEVALUE( SUBSTITUTE(SUBSTITUTE(Date__c, &quot;T&quot;, &quot; &quot;), &quot;Z&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date time value</label>
    <type>DateTime</type>
</CustomField>