force-app/main/default/objects/Sensor__c/fields/delta__c.field-meta.xml
<CustomField>
    <fullName>delta__c</fullName>
    <formula>(NOW() - Date_time_value__c)*86400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>