force-app/main/default/objects/Sensor__c/listViews/Ordenado_por_external.listView-meta.xml
<ListView>
    <fullName>Ordenado_por_external</fullName>
    <columns>NAME</columns>
    <columns>delta__c</columns>
    <columns>channel__c</columns>
    <columns>Date_time_value__c</columns>
    <columns>external_id__c</columns>
    <columns>value__c</columns>
    <filterScope>Everything</filterScope>
    <label>Ordenado por external</label>
</ListView>